fix mobile menu overlap virtual y menu

--- a/js/gated-content/src/scss/components/_top-menu.scss
+++ b/js/gated-content/src/scss/components/_top-menu.scss
@@ -2,7 +2,8 @@
   background-color: black;
   position: fixed;
   width: 100%;
-  z-index: 1030;
+
+  @include median(z-index, 1030, 39);
 
   > div {
     display:         flex;
